--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <h2 class="text-2xl font-semibold">Project Links</h2>
             <ul class="space-y-2 mt-2">
                 <li>
-                    <a href="https://wonderful-sky-03a377e10.6.azurestaticapps.net/" target="_blank"
+                    <a href="https://tiny-centaur-1c7ccc.netlify.app/" target="_blank"
                         class="text-blue-700 hover:text-blue-900">
                         Live Project
                     </a>
